# hinata-rs

./: 10-hinata.rules  Cargo.toml  README.md
src/: builder.rs  card.rs  device.rs  error.rs  hinata.rs  lib.rs  message.rs  pn532.rs  types.rs  utils.rs
src/hinata/: builder.rs  card.rs  device.rs  error.rs  pn532.rs
src/utils/: com.rs  device_parse.rs  spad0.rs
