[package]
name = "hinata"
version = "0.1.4"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
num-derive = "0.4.2"
num-traits = "0.2.19"
byteorder = "1.5.0"
async-trait = "0.1.89"
hidapi = { git = "https://github.com/nerimoe/hidapi-rs" }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }


[target.'cfg(windows)'.dependencies]
wmi = "0.18.2"
winreg = "0.55.0"
regex = "1.12.3"
windows = { version = "0.62.2", features = [
    "Win32_Devices_DeviceAndDriverInstallation", # 替代旧的 ConfigManager
    "Win32_Devices_Properties",                  # 用于 DEVPKEY_Device_ClassGuid
    "Win32_Foundation",
] }
